// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders primary and secondary labels 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-width: 36px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0 input {
  height: 0;
  margin: 0;
  width: 0;
  opacity: 0;
}

.emotion-1 {
  display: block;
  margin: 0 58px 0 0;
  font-weight: 500;
}

.emotion-1:nth-of-type(2) {
  color: #8798ad;
  font-weight: 400;
}

.emotion-3 {
  position: relative;
  border-radius: 10px;
  height: 20px;
  width: 36px;
  background-color: rgba(135,152,173,0.4);
  cursor: pointer;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.6, 1),opacity 300ms cubic-bezier(0.4, 0, 0.6, 1);
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.6, 1),opacity 300ms cubic-bezier(0.4, 0, 0.6, 1);
}

input:disabled+.emotion-3 {
  opacity: 0.4;
}

input:checked:enabled+.emotion-3 {
  background-color: #33ac2e;
}

.emotion-3::before {
  position: absolute;
  content: '';
  left: 2px;
  top: 2px;
  border-radius: 50%;
  height: 16px;
  width: 16px;
  -webkit-transition: -webkit-transform 300ms cubic-bezier(0.4, 0, 0.6, 1);
  transition: transform 300ms cubic-bezier(0.4, 0, 0.6, 1);
}

input:checked+.emotion-3::before {
  -webkit-transform: translateX(16px);
  -moz-transform: translateX(16px);
  -ms-transform: translateX(16px);
  transform: translateX(16px);
}

<div>
  <label
    class="emotion-0"
    data-testid="switch"
  >
    <span
      class="emotion-1"
      data-testid="switch-primary"
    >
      You can't input the array without navigating the redundant GB alarm!
    </span>
    <span
      class="emotion-1"
      data-testid="switch-secondary"
    >
      You can't input the array without navigating the redundant GB alarm!
    </span>
    <input
      data-testid="switch-input"
      type="checkbox"
    />
    <span
      class="emotion-3"
    />
  </label>
</div>
`;

exports[`Switch renders primary label 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-width: 36px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0 input {
  height: 0;
  margin: 0;
  width: 0;
  opacity: 0;
}

.emotion-1 {
  display: block;
  margin: 0 58px 0 0;
  font-weight: 500;
}

.emotion-1:nth-of-type(2) {
  color: #8798ad;
  font-weight: 400;
}

.emotion-2 {
  position: relative;
  border-radius: 10px;
  height: 20px;
  width: 36px;
  background-color: rgba(135,152,173,0.4);
  cursor: pointer;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.6, 1),opacity 300ms cubic-bezier(0.4, 0, 0.6, 1);
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.6, 1),opacity 300ms cubic-bezier(0.4, 0, 0.6, 1);
}

input:disabled+.emotion-2 {
  opacity: 0.4;
}

input:checked:enabled+.emotion-2 {
  background-color: #33ac2e;
}

.emotion-2::before {
  position: absolute;
  content: '';
  left: 2px;
  top: 2px;
  border-radius: 50%;
  height: 16px;
  width: 16px;
  -webkit-transition: -webkit-transform 300ms cubic-bezier(0.4, 0, 0.6, 1);
  transition: transform 300ms cubic-bezier(0.4, 0, 0.6, 1);
}

input:checked+.emotion-2::before {
  -webkit-transform: translateX(16px);
  -moz-transform: translateX(16px);
  -ms-transform: translateX(16px);
  transform: translateX(16px);
}

<div>
  <label
    class="emotion-0"
    data-testid="switch"
  >
    <span
      class="emotion-1"
      data-testid="switch-primary"
    >
      The SMS program is down, synthesize the redundant feed so we can synthesize the SQL hard drive!
    </span>
    <input
      data-testid="switch-input"
      type="checkbox"
    />
    <span
      class="emotion-2"
    />
  </label>
</div>
`;

exports[`Switch renders secondary label 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-width: 36px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0 input {
  height: 0;
  margin: 0;
  width: 0;
  opacity: 0;
}

.emotion-1 {
  display: block;
  margin: 0 58px 0 0;
  font-weight: 500;
}

.emotion-1:nth-of-type(2) {
  color: #8798ad;
  font-weight: 400;
}

.emotion-2 {
  position: relative;
  border-radius: 10px;
  height: 20px;
  width: 36px;
  background-color: rgba(135,152,173,0.4);
  cursor: pointer;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.6, 1),opacity 300ms cubic-bezier(0.4, 0, 0.6, 1);
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.6, 1),opacity 300ms cubic-bezier(0.4, 0, 0.6, 1);
}

input:disabled+.emotion-2 {
  opacity: 0.4;
}

input:checked:enabled+.emotion-2 {
  background-color: #33ac2e;
}

.emotion-2::before {
  position: absolute;
  content: '';
  left: 2px;
  top: 2px;
  border-radius: 50%;
  height: 16px;
  width: 16px;
  -webkit-transition: -webkit-transform 300ms cubic-bezier(0.4, 0, 0.6, 1);
  transition: transform 300ms cubic-bezier(0.4, 0, 0.6, 1);
}

input:checked+.emotion-2::before {
  -webkit-transform: translateX(16px);
  -moz-transform: translateX(16px);
  -ms-transform: translateX(16px);
  transform: translateX(16px);
}

<div>
  <label
    class="emotion-0"
    data-testid="switch"
  >
    <span
      class="emotion-1"
      data-testid="switch-secondary"
    >
      You can't quantify the interface without parsing the neural ADP feed!
    </span>
    <input
      data-testid="switch-input"
      type="checkbox"
    />
    <span
      class="emotion-2"
    />
  </label>
</div>
`;
